Add globalVarName to package version.

--- a/packages/server/views/packages/show.ejs
+++ b/packages/server/views/packages/show.ejs
@@ -6,17 +6,20 @@
             <tr>
                 <th>Version</th>
                 <th>CDN URL</th>
+                <th>globalVarName</th>
                 <th></th>
             </tr>
             <tr>
                 <td><input type="text" name="version" class="rounded border py-2 px-3 text-grey-900 focus:outline-none focus:border-indigo-300" /></td>
                 <td><input type="text" name="cdnUrl" class="rounded border py-2 px-3 text-grey-900 focus:outline-none focus:border-indigo-300" /></td>
+                <td><input type="text" name="globalVarName" class="rounded border py-2 px-3 text-grey-900 focus:outline-none focus:border-indigo-300" /></td>
                 <td><input type="submit" value="Add version" class="rounded bg-indigo-200 hover:bg-indigo-300 text-black p-2" /></td>
             </tr>
             <% record.versions.forEach(version => { %>
                 <tr>
                     <td><%= version.version %></td>
                     <td><%= version.cdnUrl %></td>
+                    <td><%= version.globalVarName %></td>
                 </tr>
             <% }) %>
         </table>
